--- a/kApp/package.json
+++ b/kApp/package.json
@@ -17,6 +17,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@tbdex/http-client": "^2.2.1",
+    "@web5/common": "^1.0.2",
+    "@web5/credentials": "^1.1.2",
+    "@web5/crypto": "^1.0.5",
+    "@web5/dids": "^1.1.5",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
